@@ -88,16 +88,32 @@
                 <version>3.0.0-M3</version>
                 <executions>
                     <execution>
-                        <id>enforce-maven</id>
+                        <id>enforce-maven35</id>
                         <goals>
                             <goal>enforce</goal>
                         </goals>
                         <configuration>
                             <rules>
                                 <requireMavenVersion>
-                                    <version>3.5</version>
+                                    <version>[3.5,)</version>
+                                    <message>Build requires Maven 3.5+</message>
                                 </requireMavenVersion>
                             </rules>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>require-java9</id>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <requireJavaVersion>
+                                    <version>[9,)</version>
+                                    <message>Build requires Java 9+ JDK</message>
+                                </requireJavaVersion>
+                            </rules>
+                            <fail>true</fail>
                         </configuration>
                     </execution>
                 </executions>
@@ -156,7 +172,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <release>11</release>
+                    <!-- This may get overridden and/or augmented by active profiles -->
+                    <release>9</release>
                 </configuration>
             </plugin>
 
@@ -169,6 +186,50 @@
                         <goals>
                             <goal>jar-no-fork</goal>
                         </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M4</version>
+                <executions>
+                    <execution>
+                        <id>default-test</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>test</goal>
+                        </goals>
+                        <configuration>
+                            <useModulePath>false</useModulePath>
+                            <argLine>
+                             --add-opens java.base/java.nio=ALL-UNNAMED
+                             --add-opens java.base/sun.nio.ch=ALL-UNNAMED
+                             --add-opens java.base/jdk.internal.ref=ALL-UNNAMED
+                             --add-opens java.desktop/java.awt=ALL-UNNAMED
+                             --add-opens java.desktop/sun.awt=ALL-UNNAMED
+                             --add-opens java.desktop/sun.java2d=ALL-UNNAMED
+                            </argLine>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>modular-test</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>test</goal>
+                        </goals>
+                        <configuration>
+                            <useModulePath>true</useModulePath>
+                            <argLine>
+                             --add-opens java.base/java.nio=com.metsci.glimpse.util
+                             --add-opens java.base/sun.nio.ch=com.metsci.glimpse.util
+                             --add-opens java.base/jdk.internal.ref=com.metsci.glimpse.util
+                             --add-opens java.desktop/java.awt=com.metsci.glimpse.core
+                             --add-opens java.desktop/sun.awt=com.jogamp.opengl
+                             --add-opens java.desktop/sun.java2d=com.jogamp.opengl
+                            </argLine>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
@@ -384,12 +445,82 @@
 
     <profiles>
         <profile>
+            <id>java8-only</id>
+            <activation>
+                <property>
+                    <name>m2e.version</name>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <configuration>
+                            <!-- Override the common compiler config to be Java 8 only -->
+                            <release>8</release>
+                            <excludes>
+                                <exclude>module-info.java</exclude>
+                            </excludes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>java8-compat</id>
+            <activation>
+                <property>
+                    <name>!m2e.version</name>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <!-- After default-compile, recompile everything (except module-info) with Java 8 -->
+                                <id>java8-recompile</id>
+                                <phase>compile</phase>
+                                <goals>
+                                    <goal>compile</goal>
+                                </goals>
+                                <configuration>
+                                    <release>8</release>
+                                    <excludes>
+                                        <exclude>module-info.java</exclude>
+                                    </excludes>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <!-- Override default-testCompile to be Java 8 only -->
+                                <id>default-testCompile</id>
+                                <configuration>
+                                    <release>8</release>
+                                    <excludes>
+                                        <exclude>module-info.java</exclude>
+                                    </excludes>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
             <id>release</id>
         </profile>
+
         <profile>
             <id>internal</id>
             <activation>
-                <activeByDefault>true</activeByDefault>
+                <property>
+                    <name>!public.release</name>
+                </property>
             </activation>
             <distributionManagement>
                 <repository>
@@ -427,6 +558,7 @@
                 </plugins>
             </build>
         </profile>
+
         <profile>
             <id>glimpse.metsci.com</id>
             <distributionManagement>
